# JMA-Works

./: .breakpoints  excelFormatter.py  filedAgainst.py  main.py  newIssues.py  pivot.py  processCSV.py  pyproject.toml  quarter_processor.py  retest.py  retestUpdate.py  test.py  test2.py  test3.py  toExcel.py
Backup/: Review JMA.xlsx  old_index.html
CSV/: Main.csv
Downloads/: Dashboard.xlsx  Jio Saavn pivot.xlsx  Jio Saavn.xlsx  Jio Saavnpivot.xlsx  JioPages Lite.xlsx  JioPages Mobility pivot.xlsx  JioPages Mobility.xlsx  JioSaavn Lite pivot.xlsx  JioSaavn Lite.xlsx  JioSaavn Litepivot.xlsx
templates/: dashboard.html  data.html  datahtml_backup  home.html  index.html  retestCategory.html  test.html
