[tool.poetry]
name = "jma-works"
version = "0.1.0"
description = ""
authors = ["1498saurav <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
openpyxl = "^3.0.9"
XlsxWriter = "^3.0.2"
Flask = "^2.0.2"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
